2008-06-01 Dodji Seketeli <dodji@gnome.org>

	* src/common/nmv-initializer.cc:
	 (Initializer::Initializer): init Glib type system as well.
	 This fixes test breaks on fedora9

2008-06-01 Dodji Seketeli <dodji@gnome.org>

	* src/langs/nmv-cpp-parser.cc:
	  (Parser::parse_simple_type_specifier): fix a gcc warning that
	  could have lead to a bug.

2008-05-31 Dodji Seketeli <dodji@gnome.org>

	* configure.ac: allow deprecated constructs because of the use the
	  hash_map that is deprecated in favour of c++0x based
	  unordered_map. This is turned on only when NEMIVER_DEVEL=on is
	  set.

2008-06-01 Dodji Seketeli <dodji@gnome.org>

	* configure.ac: support the NEMIVER_ALLOW_WARNINGS env var to allow
	  warnings in the build. This is a workaround the numerous warning we
	  have with gcc 4.3. Some of these warnings are in gtkmm so we cannot
	  fix them right away.

2008-05-28  Jonathon Jongsma  <jjongsma@gnome.org>

	* src/persp/dbgperspective/nmv-call-stack.cc: send another
	  select-frame command if the currently-selected frame is activated in
	  addition to sending the command when the selection is changed.
	  This should close bug #535359.

================== 0.5.3 release point (done in 0.5 branch) =============

2008-05-25 Dodji Seketeli <dodji@gnome.org>

	* src/dbgengine/nmv-gdb-engine.cc, nmv-i-debugger: 
	  Added the IDebugger::step_instruction() call to step into the
	  next machine instruction, instead of stepping into the next C
	  instruction.
	* src/persp/dbgperspective/nmv-dbg-perspective.cc:
	  (DBGPerspective::on_debugger_command_done_signal): step into the
	  next machine instruction instead of over the next instruction.
	  This might help in fixing bug #534695

2008-05-25 Dodji Seketeli <dodji@gnome.org>

	* src/dbgengine/nmv-gdb-engine.cc:
	  (in the OnCommandDoneHandler): don't set the engine state to
	  IDebugger::READY when the command that has been DONE is
	  "detach-from-target". This should fix #534619
